# quant-desktop

./: .gitignore  BLOG_POST.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_FIX_PLAN.md  CODE_REVIEW_REPORT.md  LICENSE  README.md  README_TECH.md  icon-preview.html  index.html  package-lock.json  package.json  ticker.html  tsconfig.json  vite.config.ts  缠论核心理论体系.md
.github/workflows/: release.yml
docs/: code-review-20250618.md  microsoft-store-publishing-guide.md  updater-cicd-setup-guide.md
docs/superpowers/plans/: 2026-06-17-phase-2-implementation.md  2026-06-17-phase-2-plan.md  2026-06-17-quant-desktop-phase1.md  2026-06-18-depth-index-detail.md  2026-06-19-ui-enhancement-plan.md  2026-06-20-updater-implementation.md  2026-07-02-kline-lazy-loading.md
scripts/: build.mjs  extract-changelog.mjs  make-latest-json.mjs
src/: App.vue  main.ts  ticker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/commands/: mod.rs  quote.rs  settings.rs  updater.rs  watchlist.rs  window.rs
src-tauri/src/datasource/: eastmoney.rs  headers.rs  market_clock.rs  mod.rs  search.rs  sina.rs  tencent.rs
src-tauri/src/db/: mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/updater/: commands.rs  mod.rs  proxy.rs
src/assets/: chart.css
src/composables/: useChart.ts  useTauriEvent.ts  useTheme.ts  useUpdateCheck.ts
src/stores/: quote.ts  settings.ts  updater.ts  watchlist.ts
src/types/: index.ts
src/utils/: format.ts  keys.ts
(+23 files in other folders)
